--- a/app/components/overview/client-graph/client-graph.html
+++ b/app/components/overview/client-graph/client-graph.html
@@ -1,4 +1,4 @@
-<section class="online-clients-chart">
+<section class="client-graph">
   <canvas class="chart chart-doughnut"
     chart-data="clientGraph.graph.data"
     chart-labels="clientGraph.graph.labels"
