--- a/app/components/join/join.html
+++ b/app/components/join/join.html
@@ -1,4 +1,4 @@
-<section class="join">
+<section class="join inner">
   <h1 ng-show="!join.error" ng-click="join.redirect()">Redirecting to {{ join.virtualServer.name }}</h1>
   <h1 ng-show="join.error">{{ join.error }}</h1>
 </section>
