--- a/app/components/join/join.scss
+++ b/app/components/join/join.scss
@@ -11,7 +11,7 @@
 
    background-color: $panel-bg-color;
    box-shadow: 1px 1px 1px $panel-shadow-color;
-   border-bottom: 1px solid $panel-border-color;
+   border: 1px solid $panel-border-color;
 
    @media screen and (max-width: $break-xsmall) {
        font-size: 1.5rem;
