--- a/app/components/overview/overview.html
+++ b/app/components/overview/overview.html
@@ -1,3 +1,3 @@
 <section class="overview">
-  <server server="server" ng-repeat="server in overview.virtualservers | orderBy : 'online_clients' : true"></server>
+  <server server-info="server" ng-repeat="server in overview.virtualservers | orderBy : 'online_clients' : true"></server>
 </section>
