--- a/app/components/rankings/most-points-ranking/most-points-ranking.html
+++ b/app/components/rankings/most-points-ranking/most-points-ranking.html
@@ -4,9 +4,9 @@
     <section class="client" ng-repeat="client in mostPointsRanking.clients" ng-class="{ 'gold' : $index === 0, 'silver' : $index === 1, 'bronze' : $index === 2}">
       <span>
         <i ng-show="$index < 3" class="fa fa-trophy" aria-hidden="true"></i>
-        {{ client.user_name }}
+        {{ ::client.user_names | largestOccurence }}
       </span>
-      <span>{{ client.score }}</span>
+      <span>{{ ::client.score | formatNumber }}</span>
     </section>
   </section>
   <section class="load-more">
