--- a/app/components/virtualserver/virtualserver-client-panel/virtualserver-client-panel.html
+++ b/app/components/virtualserver/virtualserver-client-panel/virtualserver-client-panel.html
@@ -1,4 +1,4 @@
-<section class="client">
+<section class="virtualserver-client">
   <i class="fa fa-user" aria-hidden="true"></i>
   <span class="client-username">{{ ::client.user_name | username }}</span>
   <span class="client-time-connected">{{ ::client.time_connected | msToTime }}</span>
