--- a/app/components/virtualserver/virtualserver-client-panel/virtualserver-client-panel.scss
+++ b/app/components/virtualserver/virtualserver-client-panel/virtualserver-client-panel.scss
@@ -1,5 +1,5 @@
-.server {
-  .client {
+.virtualserver-panel {
+  .virtualserver-client {
     display: flex;
     flex-direction: row;
     flex: none;
