--- a/app/components/server-view/server-view.html
+++ b/app/components/server-view/server-view.html
@@ -1,4 +1,4 @@
 <section class="server-view inner">
   <h1>{{ serverView.name }}</h1>
-  <client-graph online="serverView.online_clients" max="serverView.max_clients"></client-graph>
+  <virtualserver-client-graph server-id="{{ serverView.id }}"></virtualserver-client-graph>
 </section>
