--- a/app/components/virtualserver/virtualserver-panel/virtualserver-panel.scss
+++ b/app/components/virtualserver/virtualserver-panel/virtualserver-panel.scss
@@ -1,4 +1,4 @@
-.server-container {
+.virtualserver-panel-container {
   flex: initial;
   width: calc(100% / 6);
   min-width: 240px;
@@ -12,7 +12,7 @@
     padding-right: 10px;
   }
 
-  .server {
+  .virtualserver-panel {
     display: flex;
     align-items: stretch;
     flex-direction: column;
@@ -21,7 +21,7 @@
     border: 1px solid $panel-border-color;
     box-shadow: 1px 1px 1px $panel-shadow-color;
 
-    .server-name {
+    .virtualserver-name {
       flex: none;
       color: $primary-color;
       font-size: 1rem;
@@ -31,18 +31,18 @@
       border-bottom: 1px solid $panel-border-color;
     }
 
-    .server-client-graph {
+    .virtualserver-client-graph {
       flex: none;
       padding: 10px;
       border-bottom: 1px solid $panel-border-color;
     }
 
-    .server-client-list {
+    .virtualserver-client-list {
       display: flex;
       flex: 1;
       flex-direction: column;
 
-      .client-search {
+      .virtualserver-client-search {
         display: flex;
         flex-direction: row;
         align-items: center;
@@ -68,7 +68,7 @@
         }
       }
 
-      .client-list {
+      .virtualserver-client-list {
         display: flex;
         flex-direction: column;
         flex: 1;
