Added online clients per server statistic

--- a/app/components/shared/virtualserver/virtualserver/virtualserver.html
+++ b/app/components/shared/virtualserver/virtualserver/virtualserver.html
@@ -4,8 +4,8 @@
     <virtualserver-clients-graph id="virtualserver.id"></virtualserver-clients-graph>
     <virtualserver-clients id="virtualserver.id"></virtualserver-clients>
     <section class="virtualserver-more-info">
-      <a ui-sref="server.view({ id: virtualserver.id })">More Info</a>
-      <a ui-sref="server.join({ id: virtualserver.id })">Join</a>
+      <a ui-sref="server.view({ id: virtualserver.id })"><i class="fa fa-info-circle" aria-hidden="true"></i></a>
+      <a ui-sref="server.join({ id: virtualserver.id })"><i class="fa fa-external-link" aria-hidden="true"></i></a>
     </section>
   </section>
 </section>
