--- a/app/components/statistics/statistics.html
+++ b/app/components/statistics/statistics.html
@@ -1,5 +1,6 @@
 <div class="statistics inner">
   <online-clients-statistic></online-clients-statistic>
+  <online-clients-per-server-statistic></online-clients-per-server-statistic>
   <client-countries-statistic></client-countries-statistic>
   <client-platforms-statistic></client-platforms-statistic>
 </div>
