--- a/app/components/shared/virtualserver/virtualserver/virtualserver.scss
+++ b/app/components/shared/virtualserver/virtualserver/virtualserver.scss
@@ -1,22 +1,13 @@
 .virtualserver-container {
   flex: initial;
-  width: calc(100% / 6);
   min-width: 240px;
   padding: 0 5px;
-
-  &:first-child {
-    padding-left: 10px;
-  }
-
-  &:last-child {
-    padding-right: 10px;
-  }
+  margin: 0 0 10px 0;
 
   .virtualserver {
     display: flex;
     align-items: stretch;
     flex-direction: column;
-    height: 100%;
     background-color: $panel-bg-color;
     border: 1px solid $panel-border-color;
     box-shadow: 1px 1px 1px $panel-shadow-color;
@@ -31,7 +22,7 @@
       border-bottom: 1px solid $panel-border-color;
     }
 
-    .virtualserver-more-info {
+    .virtualserver-actions {
       display: flex;
       flex-direction: row;
       flex: none;
@@ -40,7 +31,6 @@
       text-align: center;
       text-transform: uppercase;
       padding: 10px 0;
-      border-top: 1px solid $panel-border-color;
 
       a {
         flex: 1;
