--- a/app/components/statistics/client-platforms-statistic/client-platforms-statistic.html
+++ b/app/components/statistics/client-platforms-statistic/client-platforms-statistic.html
@@ -1,5 +1,5 @@
 <section class="panel statistic">
-  <h1 class="title">Clients Platforms</h1>
+  <h1 class="title">Client Platforms</h1>
   <section class="content">
     <canvas class="chart chart-bar"
       chart-data="clientPlatformsStatistic.graph.data"
