--- a/app/components/dashboard/dashboard.scss
+++ b/app/components/dashboard/dashboard.scss
@@ -1,8 +1,18 @@
 .dashboard {
   display: flex;
   flex-direction: row;
-  width: 100%;
-  height: 100%;
-  min-height: 400px;
+  flex-wrap: wrap;
   padding: 10px 0;
+
+  .virtualserver-container {
+    width: calc(100% / 3);
+
+    @media screen and (max-width: $break-small) {
+      width: calc(100% / 2);
+    }
+
+    @media screen and (max-width: $break-xsmall) {
+      width: 100%;
+    }
+  }
 }
