--- a/app/components/server/view/server-view.html
+++ b/app/components/server/view/server-view.html
@@ -1,9 +1,7 @@
-<section class="server-view">
-  <section class="back-button-container">
-    <a ui-sref="dashboard" class="back-button">
-      <i class="fa fa-chevron-left" aria-hidden="true"></i>
-    </a>
+<section class="server-view inner">
+  <virtualserver-advanced id="serverView.id"></virtualserver-advanced>
+  <section class="statistics">
+    <virtualserver-clients-statistic id="serverView.id"></virtualserver-clients-statistic>
+    <virtualserver-average-clients-statistic id="serverView.id"></virtualserver-average-clients-statistic>
   </section>
-  <virtualserver id="serverView.id"></virtualserver>
-  <virtualserver-clients-statistic id="serverView.id"></virtualserver-clients-statistic>
 </section>
