--- a/app/components/server/view/server-view.scss
+++ b/app/components/server/view/server-view.scss
@@ -1,50 +1,37 @@
 .server-view {
   display: flex;
   flex-direction: row;
-  width: 100%;
-  height: 100%;
-  min-height: 400px;
-  padding: 10px;
-  margin: auto;
-
-  > .back-button-container {
-    display: block;
-    flex: none;
-    padding: 10px 10px 0 0;
-
-    > .back-button {
-      cursor: pointer;
-      color: $primary-color;
-      font-size: 1rem;
-      text-transform: uppercase;
-      padding: 5px 10px;
-      background-color: $panel-bg-color;
-      border: 1px solid $panel-border-color;
-      box-shadow: 1px 1px 1px $header-shadow-color;
-    }
-  }
+  align-items: flex-start;
 
   > .virtualserver-container {
     flex: none;
     width: 300px;
+    margin: 0;
     padding: 0 10px 0 0;
+    width: calc(100% / 3);
+
+    @media screen and (max-width: $break-xsmall) {
+      width: 100%;
+      margin-bottom: 10px;
+      padding: 0;
+    }
   }
 
-  > .statistic {
+  > .statistics {
+    display: flex;
+    flex-direction: column;
+
     flex: 1;
-    height: 100%;
-    min-height: 200px;
-    min-width: 200px;
+    width: calc(100% / 3 * 2);
     padding: 0;
 
-    .content {
-      width: 100% !important;;
-      height: calc(100% - 37px) !important;
+    @media screen and (max-width: $break-xsmall) {
+      width: 100%;
     }
+  }
 
-    .content canvas {
-      width: 100% !important;;
-      height: 100% !important;
-    }
+  @media screen and (max-width: $break-xsmall) {
+    display: block;
+    flex-direction: column;
   }
 }
