--- a/app/components/statistics/client-countries-statistic/client-countries-statistic.html
+++ b/app/components/statistics/client-countries-statistic/client-countries-statistic.html
@@ -1,5 +1,5 @@
 <section class="panel statistic">
-  <h1 class="title">Clients Countries</h1>
+  <h1 class="title">Client Countries</h1>
   <section class="content">
     <canvas class="chart chart-bar"
       chart-data="clientCountriesStatistic.graph.data"
