--- a/app/components/server/view/server-view.scss
+++ b/app/components/server/view/server-view.scss
@@ -5,10 +5,9 @@
 
   > .virtualserver-container {
     flex: none;
-    width: 300px;
-    margin: 0;
-    padding: 0 10px 0 0;
     width: calc(100% / 3);
+    margin: 0;
+    padding: 0 5px;
 
     @media screen and (max-width: $break-xsmall) {
       width: 100%;
@@ -23,7 +22,7 @@
 
     flex: 1;
     width: calc(100% / 3 * 2);
-    padding: 0;
+    padding: 0 5px;
 
     @media screen and (max-width: $break-xsmall) {
       width: 100%;
