Small change to header

--- a/app/components/layout/header/header.html
+++ b/app/components/layout/header/header.html
@@ -1,5 +1,5 @@
 <header>
-  <a href="#/overview" class="brand">Daxude</a>
+  <a href="#/overview" class="brand">{{ header.brand.primary }} <small>{{ header.brand.secondary }}</small></a>
   <section class="nav">
     <section class="nav-mobile" ng-click="header.nav.toggle()">
       <span>
