--- a/app/app.scss
+++ b/app/app.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Open Sans:400,600,700');
+@import url("https://fonts.googleapis.com/css?family=Open Sans:200,300,400,600,700");
 
 /* BODY */
 
@@ -7,7 +7,7 @@ body {
   flex-direction: column;
 
   font-weight: 700;
-  font-family: "Open Sans";
+  font-family: "Open Sans", sans-serif;
 
   width: 100%;
   height: 100%;
