--- a/app/components/rankings/rankings.html
+++ b/app/components/rankings/rankings.html
@@ -1,4 +1,4 @@
-<section class="rankings inner">
+<section class="rankings">
   <most-connections-ranking></most-connections-ranking>
   <most-average-time-connected-ranking></most-average-time-connected-ranking>
   <most-points-ranking></most-points-ranking>
