--- a/app/components/search/search.html
+++ b/app/components/search/search.html
@@ -1,5 +1,6 @@
-<section class="search inner">
+<section class="search">
   <section class="search-query">
+    <i class="fa fa-search" aria-hidden="true"></i>
     <input type="text" placeholder="Search a client" ng-model="search.query" ng-change="search.search()" />
   </section>
   <section class="search-controls">
