--- a/app/components/server/join/server-join.scss
+++ b/app/components/server/join/server-join.scss
@@ -8,6 +8,7 @@
    text-transform: uppercase;
 
    padding: 20px;
+   margin: 20px;
 
    background-color: $panel-bg-color;
    box-shadow: 1px 1px 1px $panel-shadow-color;
