--- a/app/components/server/view/server-view.html
+++ b/app/components/server/view/server-view.html
@@ -1,7 +1,5 @@
-<section class="server-view inner">
-  <virtualserver-advanced id="serverView.id"></virtualserver-advanced>
-  <section class="statistics">
-    <virtualserver-clients-statistic id="serverView.id"></virtualserver-clients-statistic>
-    <virtualserver-average-clients-statistic id="serverView.id"></virtualserver-average-clients-statistic>
-  </section>
+<section class="server-view">
+  <virtualserver-clients id="serverView.id"></virtualserver-clients>
+  <virtualserver-clients-statistic id="serverView.id"></virtualserver-clients-statistic>
+  <virtualserver-average-clients-statistic id="serverView.id"></virtualserver-average-clients-statistic>
 </section>
