--- a/app/components/statistics/average-clients-statistic/average-clients-statistic.html
+++ b/app/components/statistics/average-clients-statistic/average-clients-statistic.html
@@ -1,6 +1,8 @@
 <section class="panel statistic">
-  <h1 class="title">Average clients in the last 7 days</h1>
-  <section class="content">
+  <section class="panel-header">
+    <h1>Average clients in the last 7 days</h1>
+  </section>
+  <section class="panel-body">
     <canvas class="chart chart-line"
       chart-data="averageClientsStatistic.graph.data"
       chart-labels="averageClientsStatistic.graph.labels"
