--- a/app/components/statistics/client-countries-statistic/client-countries-statistic.html
+++ b/app/components/statistics/client-countries-statistic/client-countries-statistic.html
@@ -1,6 +1,8 @@
 <section class="panel statistic">
-  <h1 class="title">Client Countries</h1>
-  <section class="content">
+  <section class="panel-header">
+    <h1>Client Countries</h1>
+  </section>
+  <section class="panel-body">
     <canvas class="chart chart-bar"
       chart-data="clientCountriesStatistic.graph.data"
       chart-labels="clientCountriesStatistic.graph.labels"
