--- a/app/components/statistics/client-platforms-statistic/client-platforms-statistic.html
+++ b/app/components/statistics/client-platforms-statistic/client-platforms-statistic.html
@@ -1,6 +1,8 @@
 <section class="panel statistic">
+  <section class="panel-header">
   <h1 class="title">Client Platforms</h1>
-  <section class="content">
+  </section>
+  <section class="panel-body">
     <canvas class="chart chart-bar"
       chart-data="clientPlatformsStatistic.graph.data"
       chart-labels="clientPlatformsStatistic.graph.labels"
