--- a/app/components/statistics/statistics.html
+++ b/app/components/statistics/statistics.html
@@ -1,6 +1,6 @@
-<div class="statistics inner">
+<section>
   <online-clients-statistic></online-clients-statistic>
   <average-clients-statistic></average-clients-statistic>
   <client-countries-statistic></client-countries-statistic>
   <client-platforms-statistic></client-platforms-statistic>
-</div>
+</section>
