--- a/app/styles/_colors.scss
+++ b/app/styles/_colors.scss
@@ -1,19 +1,26 @@
 $brand-color: #363A42;
 $primary-color: #363A42;
-$secondary-color: #8D99AE;
-$primary-bg-color: #FFFFFF;
+$secondary-color: #FFFFFF;
+$special-color: #6699CC;
+$primary-bg-color: #f2f2f2;
 
 $nav-color: #8D99AE;
 $nav-active-color: #363A42;
 
-$header-bg-color: #f2f2f2;
-$header-border-color: #EEEEEE;
-$header-shadow-color: #bfbfbf;
+$header-bg-color: #6699CC;
+$header-border-color: #3973ac;
+$header-shadow-color: #3973ac;
 
 $footer-bg-color: #f2f2f2;
 $footer-border-color: #cccccc;
 $footer-shadow-color: #bfbfbf;
 
+$panel-header-bg-color: #6699CC;
+$panel-header-shadow-color: #3973ac;
+
+$panel-body-bg-color: #f2f2f2;
+
+$panel-footer-bg-color: #6699CC;
 $panel-bg-color: #f2f2f2;
 $panel-border-color: #d9d9d9;
 $panel-border-color2: #e6e6e6;
