--- a/app/components/layout/header/header.html
+++ b/app/components/layout/header/header.html
@@ -1,18 +1,15 @@
-<header>
-  <a href="#/overview" class="brand">{{ header.brand.primary }} <small>{{ header.brand.secondary }}</small></a>
-  <section class="nav">
-    <section class="nav-mobile" ng-click="header.nav.toggle()">
+<header class="navbar">
+  <section class="navbar-brand">
+    <a href="#/" class="primary">{{ header.brand.primary }}</a>
+    <a href="#/" class="secondary">{{ header.brand.secondary }}</a>
+  </section>
+  <section class="navbar-nav">
+    <section class="navbar-mobile" ng-click="header.nav.toggle()">
       <span>
-        <i class="fa fa-caret-up" aria-hidden="true" ng-show="header.nav.isVisible()"></i>
-        <i class="fa fa-caret-down" aria-hidden="true" ng-show="!header.nav.isVisible()"></i> Menu
+          <i class="fa fa-bars" aria-hidden="true"></i>
       </span>
-      <ul class="nav-items" ng-show="header.nav.isVisible()">
-        <li ng-repeat="item in header.nav.items" ui-sref-active="active">
-          <a ui-sref="{{ item.state }}">{{ item.text  }}</a>
-        </li>
-      </ul>
     </section>
-    <ul class="nav-items">
+    <ul class="navbar-items" ng-show="header.nav.visible">
       <li ng-repeat="item in header.nav.items" ui-sref-active="active">
         <a ui-sref="{{ item.state }}">{{ item.text }}</a>
       </li>
