--- a/app/components/rankings/rankings.scss
+++ b/app/components/rankings/rankings.scss
@@ -24,20 +24,6 @@
       }
     }
 
-    .load-more {
-      cursor: pointer;
-      text-align: center;
-
-      padding: 12px 0;
-      margin: 0 10px;
-
-      border-top: 1px solid $panel-border-color;
-    }
-
-    .content {
-      padding: 0 5px;
-    }
-
     .client {
       display: flex;
       flex-direction: row;
@@ -47,6 +33,9 @@
 
       > span {
         color: $primary-color;
+        font-weight: 700;
+        font-size: 0.7rem;
+        text-transform: uppercase;
 
         &:nth-child(1) {
           flex: none;
