--- a/app/components/search/search-option/search-option.scss
+++ b/app/components/search/search-option/search-option.scss
@@ -9,20 +9,21 @@
   padding: 5px;
   margin: 2px;
 
-  background-color: $panel-bg-color;
-  border: 1px solid $panel-border-color;
-  box-shadow: 1px 1px 1px $panel-shadow-color;
+  background-color: $panel-header-bg-color;
+  box-shadow: 1px 1px 1px $panel-header-shadow-color;
 
   &.active {
-    background-color: $primary-bg-color;
+    background-color: $panel-header-shadow-color;
   }
 
   > i {
+    color: $secondary-color;
     flex: none;
     margin-right: 5px;
   }
 
   > span {
+    color: $secondary-color;
     cursor: pointer;
     flex: 1;
     text-transform: uppercase;
