--- a/app/components/search/search.scss
+++ b/app/components/search/search.scss
@@ -5,20 +5,33 @@
   width: 100%;
 
   > .search-query {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     flex: none;
+    border-bottom: 1px solid $panel-border-color;
 
-    background-color: $panel-bg-color;
-    box-shadow: 1px 1px 1px $panel-shadow-color;
-    border: 1px solid $panel-border-color;
+    > i {
+      flex: none;
+      font-size: 2rem;
+      padding: 10px;
+
+      @media screen and (max-width: $break-xsmall) {
+        font-size: 1rem;
+      }
+    }
 
     > input {
-      color: $primary-color;
+      flex: 1;
       font-size: 2rem;
       font-weight: 700;
       text-transform: uppercase;
-
-      width: 100%;
       padding: 10px;
+      background-color: $panel-bg-color;
+
+      @media screen and (max-width: $break-xsmall) {
+        font-size: 1rem;
+      }
     }
   }
 
@@ -29,16 +42,15 @@
     flex: none;
 
     margin-top: 10px;
-    padding: 5px;
-
-    background-color: $panel-bg-color;
-    box-shadow: 1px 1px 1px $panel-shadow-color;
-    border: 1px solid $panel-border-color;
 
     > .search-order-types, > .search-orders {
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
+
+      @media screen and (max-width: $break-xsmall) {
+        flex-direction: column;
+      }
     }
 
     > .search-option {
@@ -50,12 +62,11 @@
     margin: 10px 0 5px;
 
       > .client {
-        padding: 10px;
+        padding: 10px 0;
         margin-bottom: 10px;
 
-        background-color: $panel-bg-color;
-        box-shadow: 1px 1px 1px $panel-shadow-color;
-        border: 1px solid $panel-border-color;
+        background-color: $panel-body-bg-color;
+        border-bottom: 1px solid $panel-border-color;
 
         &:last-child {
           margin-bottom: 0;
@@ -64,7 +75,7 @@
         > .operating-system, > .username {
           display: block;
           color: $primary-color;
-          font-size: 1.5rem;
+          font-size: 1rem;
         }
 
         > .operating-system {
@@ -74,17 +85,19 @@
         > .username {
           word-wrap: break-word;
           margin-bottom: 5px;
+          font-weight: 800;
+          text-transform: uppercase;
         }
 
         > .last-seen, > .connections, > .average-connected-time {
           display: block;
-          color: $secondary-color;
+          color: $primary-color;
           font-size: 0.65rem;
           padding: 2px;
         }
 
         .special {
-          color: $primary-color;
+          color: $special-color;
         }
     }
   }
