--- a/app/components/server/view/server-view.scss
+++ b/app/components/server/view/server-view.scss
@@ -1,36 +1,14 @@
 .server-view {
   display: flex;
-  flex-direction: row;
-  align-items: flex-start;
+  flex-direction: column;
 
-  > .virtualserver-container {
-    flex: none;
-    width: calc(100% / 3);
-    margin: 0;
-    padding: 0 5px;
+  > section {
+    flex: 1;
+    margin: 0 0 10px 0;
 
     @media screen and (max-width: $break-xsmall) {
       width: 100%;
-      margin-bottom: 10px;
       padding: 0;
     }
-  }
-
-  > .statistics {
-    display: flex;
-    flex-direction: column;
-
-    flex: 1;
-    width: calc(100% / 3 * 2);
-    padding: 0 5px;
-
-    @media screen and (max-width: $break-xsmall) {
-      width: 100%;
-    }
-  }
-
-  @media screen and (max-width: $break-xsmall) {
-    display: block;
-    flex-direction: column;
   }
 }
