--- a/app/components/shared/virtualserver/virtualserver-clients-statistic/virtualserver-clients-statistic.html
+++ b/app/components/shared/virtualserver/virtualserver-clients-statistic/virtualserver-clients-statistic.html
@@ -1,6 +1,8 @@
 <section class="panel statistic">
-  <h1 class="title">Clients in the last 7 days</h1>
-  <section class="content">
+  <section class="panel-header">
+    <h1>Clients in the last 7 days</h1>
+  </section>
+  <section class="panel-body">
     <canvas class="chart chart-line"
       chart-data="virtualserverClientsStatistic.graph.data"
       chart-labels="virtualserverClientsStatistic.graph.labels"
