--- a/app/components/shared/virtualserver/virtualserver-clients/virtualserver-clients.html
+++ b/app/components/shared/virtualserver/virtualserver-clients/virtualserver-clients.html
@@ -1,13 +1,20 @@
-<section class="virtualserver-client-list">
-  <section class="virtualserver-client-search">
-    <i class="fa fa-search" aria-hidden="true"></i>
-    <input type="text" placeholder="Search a client" ng-model="clients.filter" />
+<section class="panel">
+  <section class="panel-header">
+      <h1>{{ ::virtualserver.name }}</h1>
   </section>
-  <section class="virtualserver-client-list">
-    <section class="virtualserver-client" ng-repeat="client in clients.clients | orderBy : 'time_connected' : true | filter : { user_name : clients.filter }">
-      <i class="fa fa-user" aria-hidden="true"></i>
-      <span class="client-username">{{ ::client.user_name | username }}</span>
-      <span class="client-time-connected">{{ ::client.time_connected | msToTime }}</span>
+  <section class="panel-body">
+    <section class="client-list">
+      <section class="client-search">
+        <i class="fa fa-search" aria-hidden="true"></i>
+        <input type="text" placeholder="Search a client" ng-model="virtualserver.filter" />
+      </section>
+      <section class="-client-list">
+        <section class="client" ng-repeat="client in virtualserver.clients | orderBy : 'time_connected' : true | filter : { user_name : virtualserver.filter }">
+          <i class="fa fa-user" aria-hidden="true"></i>
+          <span class="username">{{ ::client.user_name | username }}</span>
+          <span class="time-connected">{{ ::client.time_connected | msToTime }}</span>
+        </section>
+      </section>
     </section>
   </section>
 </section>
