--- a/app/components/layout/footer/footer.scss
+++ b/app/components/layout/footer/footer.scss
@@ -12,21 +12,28 @@ footer {
         }
 
         > ul { 
+            width: 100%;
             padding: 5px;
 
             > li {
+                display: flex;
+                flex-direction: row;
                 padding: 5px;
 
                 > span {
+                    flex: 1;
                     color: $primary-color;
                     font-size: 1rem;
                     text-transform: uppercase;
 
                     &.primary {
+                        text-align: right;
                         font-weight: 800;
                     }
                     &.secondary {
+                        text-align: left;
                         font-weight: 200;
+                        padding-left: 5px;
                     }
 
                     &.online {
