Added total connected time ranking directive.

--- a/app/components/statistics/statistics.html
+++ b/app/components/statistics/statistics.html
@@ -1,4 +1,4 @@
-<section>
+<section class="statistics">
   <online-clients-statistic></online-clients-statistic>
   <average-clients-statistic></average-clients-statistic>
   <client-countries-statistic></client-countries-statistic>
