--- a/app/components/rankings/rankings.scss
+++ b/app/components/rankings/rankings.scss
@@ -1,27 +1,21 @@
 .rankings {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   width: 100%;
-  
-  .ranking {
-    display: block;
-    float: left;
+  padding: 10px 0;
+  overflow: auto;
 
-    &:nth-child(1), &:nth-child(2) {
-      display: block;
-      float: left;
-      width: calc(50% - 5px);
-      margin-bottom: 10px;
+  @media screen and (max-width: $break-small) {
+    flex-direction: column;
+  }
 
-      @media screen and (max-width: $break-xsmall) {
-        width: 100%;
-      }
-    }
+  > .ranking {
+    padding: 0 5px;
+    width: calc(100% / 2);
 
-    &:nth-child(2) {
-      margin-left: 10px;
-
-      @media screen and (max-width: $break-xsmall) {
-        margin-left: 0;
-      }
+    @media screen and (max-width: $break-small) {
+      width: 100%;
     }
 
     .client {
